   and @lalias run the "enter"/"leave" commands, so @hooks get run, command
   restrictions checked, etc. [MG]
 * New @lock/from and @lock/receive locks, to control who can give to an
   object, and what objects can be given to them, respectively. From a 
   suggestion by Nammyung@M*U*S*H, based on locks on ElendorMUSH. [MG]

Commands:
 * New @include <obj>/<attr> command, which inserts <attr> into the current
   action list. Patch by Javelin.
 * @scan can now take multiple switches at the same time. [MG]
 * @version now reports the SVN revision of the current version, when 
   available. Suggested by Paige. [MG]
 * @clone can take a garbage dbref for the new object, the same as @create.
   Suggested by Dan. [MG]
 * 'look' now supports more english-matching (look this foo's 1st bar). [MG]
 * You can now look at objects on the other side of transparent exits, with
   "look [toward] <exit>'s <object>". Suggested by Trinsec. [MG]
 * All wizards can now use @command/add. Suggested by qa'toq. [MG]
 * function_alias in alias.cnf now creates a proper alias, not a clone, of
   functions. @function/alias added, which does the same in-game. [MG]
 * New @command/clone and @function/clone commands, which create copies of
   a command/function which initially work the same as, but are independant
   of, the originals. Based on suggestion by Bane. [MG]
   
Functions:
 * Added strfirstof() and strallof(), which return the first arg/all args
   which are non-empty strings. [MG]
 * Added reglattr[p](), regxattr[p]() and regnattr[p](), regexp variants of 
   lattr[p](), xattr[p]() and nattr[p](). Suggested by Trinsec. [MG]
 * The *emit() functions, and cbufferadd(), are now disabled when
   function_side_effects are off. Suggested by Cheetah. [MG]
 * round() now takes an optional third argument to 0-pad the results if
   needed. Suggested by Trinsec. [SW]
 * Many functions (particularly ones which take only numbers, dbrefs or